--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&family=Noto+Sans+KR:wght@300&family=Oswald:wght@500&display=swap" rel="stylesheet">
-    <title>Solid App</title>
+    <title>Resume App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
